added back button from settings page

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -21,7 +21,7 @@
 
         <SwitchPreferenceCompat
             app:key="sync"
-            app:title="@string/sync_title" />
+            app:title="@string/settings_display_title" />
 
         <SwitchPreferenceCompat
             app:dependency="sync"
