--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimary">#33b5e5</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#33b5e5</color>
     <color name="white">#ffff</color>
     <color name="grey_20">#cccccc</color>
     <color name="grey_80">#37474F</color>
     <color name="black_overlay">#66000000</color>
+    <color name="login_primary">#33b5e5</color>
+    <color name="login_secondary">#33b5e5</color>
 </resources>
