--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,14 +18,14 @@
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.avinash.requestresource.ui.slideshow.SlideshowFragment"
+        android:id="@+id/nav_list"
+        android:name="com.avinash.requestresource.ItemFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
 
     <fragment
         android:id="@+id/nav_logout"
-        android:name="com.avinash.requestresource.logoutFragment"
+        android:name="com.avinash.requestresource.ui.logout.home.logoutFragment"
         android:label="@string/menu_logout"
         tools:layout="@layout/fragment_logout" />
 </navigation>
