--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -38,12 +38,19 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/Description"
+                android:id="@+id/item_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/text_margin"
                 android:layout_weight="1"
                 android:text="TextView" />
+
         </LinearLayout>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimary" />
     </LinearLayout>
 
 </LinearLayout>
