--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -13,36 +13,51 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/content"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/text_margin"
-                android:text="Need N95 Masks"
+                android:layout_weight="4"
+                android:text="Need N95 MasksNeed N95 MasksNeed N95 MasksNeed N95 Masks"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
-            <TextView
-                android:id="@+id/item_number"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/text_margin"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                tools:text="Quantity: 3" />
+                android:layout_marginRight="10dp"
+                android:gravity="right"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/item_completed"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/text_margin"
-                android:layout_weight="1"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+                <TextView
+                    android:id="@+id/item_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/text_margin"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    tools:text="Quantity: 3" />
+
+                <TextView
+                    android:id="@+id/item_completed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/text_margin"
+                    android:layout_marginBottom="@dimen/text_margin"
+                    android:layout_weight="1"
+                    android:text="Done: Yes"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="36dp"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <TextView
@@ -50,14 +65,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/text_margin"
+                android:layout_marginTop="2dp"
+                android:layout_marginRight="@dimen/text_margin"
+                android:layout_marginBottom="2dp"
                 android:layout_weight="1"
-                android:text="TextView" />
+                android:text="A very long description for this request." />
 
         </LinearLayout>
 
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
+            android:layout_marginBottom="3dp"
             android:background="@color/colorPrimary" />
     </LinearLayout>
 
