added logout functionality. Navigates to the login page after logout.
Signed-off-by: Avinash <avinashbondalapati@gmail.com>

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,7 +25,7 @@
 
     <fragment
         android:id="@+id/nav_logout"
-        android:name="com.avinash.requestresource.ui.logout.home.logoutFragment"
+        android:name="com.avinash.requestresource.logoutFragment"
         android:label="@string/menu_logout"
         tools:layout="@layout/fragment_logout" />
 </navigation>
