--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -6,9 +6,15 @@
     app:startDestination="@+id/nav_home">
 
     <fragment
+        android:id="@+id/nav_list"
+        android:name="com.avinash.requestresource.ItemFragment"
+        android:label="@string/requests_list"
+        tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
         android:id="@+id/nav_home"
         android:name="com.avinash.requestresource.ui.home.HomeFragment"
-        android:label="@string/menu_home"
+        android:label="@string/requests_new"
         tools:layout="@layout/fragment_home" />
 
     <fragment
@@ -17,11 +23,6 @@
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_gallery" />
 
-    <fragment
-        android:id="@+id/nav_list"
-        android:name="com.avinash.requestresource.ItemFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
 
     <fragment
         android:id="@+id/nav_logout"
