--- a/app/src/main/res/layout/activity_register_activity.xml
+++ b/app/src/main/res/layout/activity_register_activity.xml
@@ -8,6 +8,14 @@
     android:background="#00B8D4"
     tools:context=".login_activity">
 
+    <ProgressBar
+        android:id="@+id/progress_loader"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="visible" />
+
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
