--- a/app/src/main/res/layout/activity_register_activity.xml
+++ b/app/src/main/res/layout/activity_register_activity.xml
@@ -62,6 +62,19 @@
             app:layout_constraintVertical_bias="0.01999998"
             app:layout_constraintWidth_percent="0.6" />
 
+        <EditText
+            android:id="@+id/register_activity_password2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPassword"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/register_activity_password"
+            app:layout_constraintVertical_bias="0.02"
+            app:layout_constraintWidth_percent="0.6" />
+
         <Button
             android:id="@+id/register_activity_button"
             android:layout_width="0dp"
@@ -74,6 +87,18 @@
             app:layout_constraintTop_toBottomOf="@+id/register_activity_password"
             app:layout_constraintVertical_bias="0.600"
             app:layout_constraintWidth_percent=".6" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Swipe Right to Login."
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/register_activity_button"
+            app:layout_constraintVertical_bias="0.8" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
