fixed color issue in login and register activity and modified to include email in hint of username.
Signed-off-by: avinash <avinashbondalapati@gmail.com>

--- a/app/src/main/res/layout/activity_login_activity.xml
+++ b/app/src/main/res/layout/activity_login_activity.xml
@@ -40,6 +40,7 @@
             android:id="@+id/login_activity_username"
             android:layout_width="0dp"
             android:layout_height="58dp"
+            android:backgroundTint="#011955"
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -53,6 +54,7 @@
             android:id="@+id/login_activity_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:backgroundTint="#011955"
             android:ems="10"
             android:inputType="textPassword"
             app:layout_constraintBottom_toBottomOf="parent"
